fix: contact info text should always be black to be visible

--- a/styles.css
+++ b/styles.css
@@ -437,7 +437,7 @@ article .icon {
 }
 
 .contact-info-container a {
-    color: var(--bg-main);
+    color: var(--black);
 }
 
 .contact-icon {
